# konjac2

./: .env.sample  .gitignore  Dockerfile  README.rst  action.yml  alembic.ini  indicators.ipynb  lr.model  pyproject.toml  trading-config.toml
.github/workflows/: action.yml
alembic/: env.py
alembic/versions/: 28dcaac91018_add_h4_date_column_for_trade_table.py  8f78e97382b0_add_open_type_column_for_trade_table.py  c83f3b281fc8_add_trading_trend_trade_signal_table.py  d846c862f2eb_add_trading_trend_trade_signal_table.py  e587a30a97f1_add_trading_trend_trade_signal_table.py
konjac2/: config.py  main.py
konjac2/backtest/: backtest.py  forex_backtest.py  prepare_data.py
konjac2/bot/: telegram_bot.py
konjac2/chart/: heikin_ashi.py
konjac2/indicator/: atr_kc.py  bb_cci_momentum.py  chandelier_exit.py  choppiness_index.py  don_chain_channels.py  heikin_ashi_momentum.py  higher_lower.py  hurst.py  kalman_filter.py  logistic_regression.py  moving_average.py  normalized_macd.py  perceptron.py  range_filter.py  regressor.py  rsi_trend.py  rumi.py  senkou_span.py  squeeze_momentum.py  ut_bot.py  utils.py  volume_volatility.py  vwap.py
konjac2/jobs/: __init__.py  scanner.py
konjac2/models/: __init__.py  signal.py  trade.py  trend.py
konjac2/routers/: chart.py  daily_trend.py
konjac2/service/: fetcher.py  trading_config.py  trender.py  utils.py
konjac2/strategy/: abc_strategy.py  bb_adx_rsi_strategy.py  bb_adx_rsi_strategy_v2.py  bb_adx_rsi_strategy_v3.py  bb_hma_rsi_strategy.py  bb_rsi_strategy.py  bb_stoch_strategy.py  bbcci_strategy.py  (+45 more)
tests/: test_chart_heikin_ashi.py  test_konjac2.py  test_service_fetcher.py
ui/: package-lock.json  package.json
(+18 files in other folders)
