[tool.poetry]
name = "konjac2"
version = "0.1.0"
description = ""
authors = ["hou jian <unclebean2013@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.1"
ccxt = "^1.76.66"
pandas-ta = "^0.3.14-beta.0"
v20 = "^3.0.25"
uvicorn = "^0.17.6"
yfinance = "^0.1.70"
ipython = "^8.1.1"
PyYAML = "^6.0"
python-dotenv = "^0.19.2"
flake8 = "^4.0.1"
black = "^22.1.0"
jupyter = "^1.0.0"
plotly = "^5.6.0"
pytest-mock = "^3.7.0"
python-telegram-bot = "^13.11"
alembic = "^1.7.7"
SQLAlchemy = "^1.4.32"
APScheduler = "^3.6.3"
scikit-learn = "^1.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
